--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   backend:
     build:
       context: .
-      dockerfile: backend/Dockerfile.gpu
+      dockerfile: backend/Dockerfile
       cache_from:
         - zylo-backend:latest
     container_name: zylo-backend
