Update comments and dependencies in requirements.txt

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-# Core API
+# Core server stack
 fastapi==0.121.0
 uvicorn==0.38.0
 python-dotenv==1.2.1
@@ -8,30 +8,26 @@ redis==5.0.1
 requests==2.32.5
 tqdm==4.67.1
 
-# ML / Audio
-numpy==2.0.2
-scipy==1.13.1
+# Audio / ML
 ffmpeg-python==0.2.0
 soundfile==0.13.1
+scipy==1.10.1      # Works with numpy < 2
+numpy==1.26.4      # THIS is the compatible version for scipy+demucs
 
-# WhisperX (brings torch CPU automatically)
-whisperx==3.7.4
+# WhisperX (CPU)
+whisperx==3.7.4    # Will auto-install torch CPU
 
-# Demucs (CPU version)
+# Demucs CPU
 demucs==4.0.0
 
-# TensorFlow CPU
-tensorflow-cpu==2.9.3
-tensorflow-io-gcs-filesystem==0.31.0
-
-# DB / Utils
+# Database + Utils
 mysql-connector-python==8.3.0
 PyYAML==6.0.3
 coloredlogs==15.0.1
 colorama==0.4.6
 humanfriendly==10.0
 
-# Google APIs
+# Google APIs (safe versions)
 google-api-python-client==2.88.0
 google-auth==2.22.0
 google-auth-httplib2==0.1.0
